Simple basic page layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nikolay Ignatyev</title>
+    <title>Nikolay Ignatyev Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--[if IE]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Neuton|Roboto:400,400i" rel="stylesheet">
   </head>
+
+  <nav class="nav">
+    <ul class="nav-menu">
+      <li class="menu-item">
+        <a class="menu-item--link" href="#intro">Home</a>
+      </li>
+      <li class="menu-item">
+        <a class="menu-item--link"href="#about-me">About me</a>
+      </li>
+      <li class="menu-item">
+        <a class="menu-item--link" href="#portfolio">Portfolio</a>
+      </li>
+      <li class="menu-item">
+        <a class="menu-item--link" href="#contacts">Contacts</a>
+      </li>
+    </ul>
+  </nav>
+
+  <section id="intro" class="intro">
+      <img class="avatar" src="img/avatar.png" width="100" height="100"  />
+      <h1>Hello, I'm Nikolay Ignatyev. <br />I'm a Junior Front-End developer from Saint-Petersburg, Russia</h1>
+  </section>
+
+  <section id="about-me" class="about-me">
+    <h1 class="section--header">About me</h1>
+    <article class="article-text">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis molestias tempora mollitia
+      deleniti, velit amet quasi alias commodi quos. Soluta ullam magnam earum enim excepturi dolorem laborum,
+      veniam hic. Voluptas.
+    </article>
+  </section>
+
+  <section id="portfolio" class="profolio">
+    <h1 class="section--header">My projects</h1>
+    <article class="article-text">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis molestias tempora mollitia
+      deleniti, velit amet quasi alias commodi quos. Soluta ullam magnam earum enim excepturi dolorem laborum,
+      veniam hic. Voluptas.
+    </article>
+  </section>
+
+  <footer id="contacts">
+    <h1 class="section--header">Contacts</h1>
+    <article class="article-text">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis molestias tempora mollitia
+      deleniti, velit amet quasi alias commodi quos. Soluta ullam magnam earum enim excepturi dolorem laborum,
+      veniam hic. Voluptas.
+    </article>
+  </footer>
 
 <body>
 
