Completed main section layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Neuton|Roboto:400,400i" rel="stylesheet">
   </head>
 
@@ -29,7 +30,11 @@
 
   <section id="intro" class="intro">
       <img class="avatar" src="img/avatar.png" width="100" height="100"  />
-      <h1>Hello, I'm Nikolay Ignatyev. <br />I'm a Junior Front-End developer from Saint-Petersburg, Russia</h1>
+      <div class="intro-text">
+
+        <p><i class="fa fa-angle-double-left" aria-hidden="true"></i>Hello, I'm Nikolay Ignatyev.
+        I'm a Junior Front-End developer from Saint-Petersburg, Russia<i class="fa fa-angle-double-right" aria-hidden="true"></i></p>
+      </div>
   </section>
 
   <section id="about-me" class="about-me">
