Added logos to intro section, portfolio section layout

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
                 <ul class="info-skills--list">
                   <li class="info-skills--item">
                     <div class="info-skills--logo">
-                      <img class="skills-logo--img" src="" alt="">
+                      <img class="skills-logo--img" src="img/js.png" alt="">
                     </div>
                     <div class="info-skills--name">JavaScript</div>
                     <div class="info-skills--level">Junior</div>
                   </li>
                   <li class="info-skills--item">
                     <div class="info-skills--logo">
-                      <img class="skills-logo--img" src="" alt="">  
+                      <img class="skills-logo--img" src="img/css3.png" alt="">  
                     </div>
                     <div class="info-skills--name">CSS3</div>
                     <div class="info-skills--level">Junior</div>
                   </li>
                   <li class="info-skills--item">
                     <div class="info-skills--logo">
-                      <img class="skills-logo--img" src="" alt="">  
+                      <img class="skills-logo--img" src="img/html5.png" alt="">  
                     </div>
                     <div class="info-skills--name">HTML5</div>
                     <div class="info-skills--level">Junior</div>
@@ -97,13 +97,80 @@
             </div>
       </section>
 
-      <section id="portfolio" class="profolio">
+      <section id="portfolio" class="portfolio">
         <h1 class="section--header">My projects</h1>
         <article class="article-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis molestias tempora mollitia
-          deleniti, velit amet quasi alias commodi quos. Soluta ullam magnam earum enim excepturi dolorem laborum,
-          veniam hic. Voluptas.
+          Below you can find list of all my projects,
+          that I made during my long way learning FrontEnd development.
         </article>
+
+        <div class="container-projects">
+          <ul class="projects-list">
+            <li class="project-item">
+              <div class="project-screen" >
+                <img class="project-screen-img"src="http://placehold.it/150x150">
+              </div>
+              <div class="project-description">
+                <p class="project-title">Project title</p>
+                <p class="project-details">Project description</p>
+              </div>
+            </li>
+
+            <li class="project-item">
+              <div class="project-screen">
+                <img class="project-screen-img" src="http://placehold.it/150x150">
+              </div>
+              <div class="project-description">
+                <p class="project-title">Project title</p>
+                <p class="project-details">Project description</p>
+              </div>
+            </li>
+
+            <li class="project-item">
+              <div class="project-screen">
+                <img class="project-screen-img" src="http://placehold.it/150x150">
+              </div>
+              <div class="project-description">
+                <p class="project-title">Project title</p>
+                <p class="project-details">Project description</p>
+              </div>
+            </li>
+          </ul>
+
+          <ul class="projects-list">
+            <li class="project-item">
+              <div class="project-screen" >
+                <img class="project-screen-img"src="http://placehold.it/150x150">
+              </div>
+              <div class="project-description">
+                <p class="project-title">Project title</p>
+                <p class="project-details">Project description</p>
+              </div>
+            </li>
+
+            <li class="project-item">
+              <div class="project-screen">
+                <img class="project-screen-img" src="http://placehold.it/150x150">
+              </div>
+              <div class="project-description">
+                <p class="project-title">Project title</p>
+                <p class="project-details">Project description</p>
+              </div>
+            </li>
+
+            <li class="project-item">
+              <div class="project-screen">
+                <img class="project-screen-img" src="http://placehold.it/150x150">
+              </div>
+              <div class="project-description">
+                <p class="project-title">Project title</p>
+                <p class="project-details">Project description</p>
+              </div>
+            </li>
+          </ul>
+
+          
+        </div>
       </section>
 
       <footer id="contacts">
